# -*- Makefile -*-

man_MANS = \
	bsvplay.1 \
	checkbrack.1 \
	cwdiff.1 \
	declone.1 \
	diff2php.1 \
	extract_d3pkg.1 \
	extract_dxhog.1 \
	extract_f3pod.1 \
	extract_qupak.1 \
	fd0ssh.1 \
	filenameconv.1 \
	flv2avi.1 \
	fnt2bdf.1 \
	fxterm.1 \
	git-author-stat.1 \
	git-export-patch.1 \
	git-forest.1 \
	git-lemon.1 \
	git-revert-stats.1 \
	longjumpcd.1 \
	mailsplit.1 \
	man2html.1 \
	mod2ogg.1 \
	mpg2ogg.1 \
	netload.1 \
	ofl.1 \
	omixer.1 \
	oplay.1 \
	orec.1 \
	pesubst.1 \
	playalot.1 \
	qplay.1 \
	recursive_lower.1 \
	sourcefuncsize.1 \
	stxdb.1 \
	sysinfo.1 \
	tailhex.1 \
	testdl.1 \
	truncate.1 \
	wavdiff.1 \
	wktimer.1 \
	vfontas.1 \
	xcp.1 \
	hxtools.7 \
	logontime.8 \
	newns.8 \
	raregetty.8 \
	utmp_register.8 \
	vcsaview.8
