# -*- Makefile -*-

man_MANS = \
	bsvplay.1 \
	cctypeinfo.1 \
	checkbrack.1 \
	cwdiff.1 \
	declone.1 \
	diff2php.1 \
	extract_d3pkg.1 \
	extract_dxhog.1 \
	extract_f3pod.1 \
	extract_qupak.1 \
	fd0ssh.1 \
	fduphl.1 \
	fnt2bdf.1 \
	fxterm.1 \
	git-author-stat.1 \
	git-export-patch.1 \
	git-forest.1 \
	git-revert-stats.1 \
	git-track.1 \
	hxtools.7 \
	logontime.8 \
	mailsplit.1 \
	man2html.1 \
	mod2ogg.1 \
	mpg2ogg.1 \
	netload.8 \
	newns.8 \
	ofl.1 \
	omixer.1 \
	oplay.1 \
	orec.1 \
	pesubst.1 \
	png2wx.1 \
	qplay.1 \
	psthreads.1 \
	recursive_lower.1 \
	sourcefuncsize.1 \
	spec-beautifier.1 \
	stxdb.1 \
	sysinfo.1 \
	tailhex.1 \
	utmp_register.8 \
	vcsaview.8 \
	vfontas.1 \
	wavdiff.1 \
	wktimer.1 \
	xcp.1 \
	xfs_irecover.8
