# -*- Makefile -*-

bin_SCRIPTS = \
	checkbrack \
	cwdiff \
	git-author-stat \
	git-export-patch \
	git-forest \
	git-track \
	man2html \
	spec-beautifier 

pkglibexec_PROGRAMS = \
	cctypeinfo

pkglibexec_SCRIPTS = \
	diff2php \
	doxygen-kerneldoc-filter \
	git-blame-stats \
	git-new-root \
	git-revert-stats \
	paddrspacesize \
	proc_stat_signal_decode \
	sourcefuncsize
