# -*- Makefile -*-

AM_CFLAGS          = $(AC_CFLAGS)

supp_PROGRAMS      = testdl
supp_SCRIPTS       = diff2php extract_d3hog extract_d3pkg extract_f3pod \
                     extract_q2pak findcont flv2avi fnt2bdf logontime mpg2ogg \
                     netload png2wx.pl png2wx.py proc_stat_signal_decode \
                     vcsaview
testdl_LDFLAGS     = -lHX
